--- a/GestionVentas/src/app/LoginView.fxml
+++ b/GestionVentas/src/app/LoginView.fxml
@@ -5,22 +5,38 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<GridPane xmlns:fx="http://javafx.com/fxml" fx:controller="app.LoginController"
-          hgap="10" vgap="10" alignment="CENTER">
+<StackPane xmlns:fx="http://javafx.com/fxml" fx:controller="app.LoginController">
     <padding>
         <Insets top="10" right="10" bottom="10" left="10"/>
     </padding>
 
-    <!-- Etiquetas -->
-    <Label text="DNI:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-    <Label text="Contraseña:" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
+    
+    <GridPane hgap="10" vgap="10" alignment="CENTER">
 
-    <!-- Campos de texto -->
-    <TextField fx:id="dniField" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
-    <PasswordField fx:id="passwordField" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+    <HBox spacing="20" alignment="CENTER_LEFT" fx:id="logoLabelContainer" styleClass="hbox">
+        <padding>
+            <Insets top="20" right="20" bottom="20" left="20"/>
+        </padding>
+        <!-- Imagen -->
+        <ImageView fx:id="logoView" styleClass="image-view"/>
+        <VBox spacing="10" styleClass="vbox">
+            <!-- Campo DNI -->
+            <Label text="DNI:" />
+            <TextField fx:id="dniField"/>
+            <!-- Campo contraseña -->
+            <Label text="Contraseña:" />
+            <PasswordField fx:id="passwordField"/>
+        </VBox>
+    </HBox>
 
-    <!-- Botones -->
-    <Button text="Ingresar" onAction="#handleLogin" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
-    <Button text="Cancelar" onAction="#handleCancel" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
-</GridPane>
+        <!-- Botones -->
+        <Button text="Ingresar" fx:id="btnLogin" onAction="#handleLogin" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
+        <Button text="Cancelar" fx:id="btnCancel" onAction="#handleCancel" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+
+    </GridPane>
+</StackPane>
