--- a/GestionVentas/bin/resources/styles.css
+++ b/GestionVentas/bin/resources/styles.css
@@ -4,7 +4,7 @@
 
 /* Estilo para el contenedor de imagen y etiquetas */
 .hbox {
-    -fx-alignment: center-left; /* Alinear a la izquierda */
+    -fx-alignment: center; /* Alinear a la izquierda */
     -fx-spacing: 20; /* Espacio entre la imagen y el contenedor de etiquetas */
 }
 
@@ -16,5 +16,5 @@
 
 /* Estilo para las etiquetas y campos de texto */
 .vbox {
-    -fx-spacing: 10; /* Espacio entre las etiquetas y los campos de texto */
+    -fx-spacing: 15; /* Espacio entre las etiquetas y los campos de texto */
 }
