--- a/GestionVentas/src/resources/AddUser.fxml
+++ b/GestionVentas/src/resources/AddUser.fxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
+<?import app.UsersController?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<StackPane prefHeight="400.0" prefWidth="600.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane prefHeight="264.0" prefWidth="551.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.UsersController">
 <VBox alignment="CENTER">
     <Label text="Nuevo usuario" textAlignment="CENTER" textFill="WHITE">
         <padding>
@@ -21,35 +21,35 @@
         <Font name="System Bold Italic" size="15.0" />
     </font>
     </Label>
-    <TextField fx:id="usernameField" alignment="TOP_LEFT" maxWidth="200.0" prefHeight="25.0" promptText="Nombre y apellido">
+    <TextField fx:id="nomYapeField" alignment="TOP_LEFT" maxWidth="200.0" prefHeight="25.0" promptText="Nombre y apellido">
         <VBox.margin>
             <Insets bottom="10.0" />
         </VBox.margin>
     </TextField>
-    <TextField fx:id="usernameField" alignment="TOP_LEFT" maxWidth="200.0" prefHeight="25.0" promptText="DNI">
+    <TextField fx:id="dniField" alignment="TOP_LEFT" maxWidth="200.0" prefHeight="25.0" promptText="DNI">
         <VBox.margin>
             <Insets bottom="10.0" />
         </VBox.margin>
     </TextField>
-    <TextField fx:id="usernameField" alignment="TOP_LEFT" maxWidth="200.0" prefHeight="25.0" promptText="Correo electronico">
+    <TextField fx:id="emailField" alignment="TOP_LEFT" maxWidth="200.0" prefHeight="25.0" promptText="Correo electronico">
         <VBox.margin>
             <Insets bottom="10.0" />
         </VBox.margin></TextField>
-    <MenuButton text="Tipo de perfil">
+    <MenuButton fx:id="perfilMenuButton" text="Tipo de perfil">
         <items>
-        <MenuItem text="Administrador" />
-        <MenuItem text="Vendedor" />
-            <MenuItem text="Repositor" />
+        <MenuItem fx:id="adminMenuIem" text="Administrador" onAction="#initialize" />
+        <MenuItem fx:id="vendedorMenuIem" text="Vendedor" onAction="#initialize" />
+        <MenuItem fx:id="repositorMenuIem" text="Repositor" onAction="#initialize" />
         </items>
     </MenuButton>
     <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
         <children>
-        <Button mnemonicParsing="false" text="Agregar">
+        <Button mnemonicParsing="false" text="Agregar" onAction="#agregarUsuario">
             <HBox.margin>
                 <Insets right="50.0" />
             </HBox.margin>
         </Button>
-        <Button contentDisplay="CENTER" mnemonicParsing="false" text="Eliminar" />
+        <Button contentDisplay="CENTER" mnemonicParsing="false" text="Cancelar" />
         </children>
     </HBox>
     <StackPane.margin>
