--- a/GestionVentas/src/resources/MainView.fxml
+++ b/GestionVentas/src/resources/MainView.fxml
@@ -9,27 +9,23 @@
     <MenuBar>
         <Menu text="Usuarios" fx:id="adminOption">
             <MenuItem text="Dar de alta" fx:id="menuItemAlta" onAction="#altaUsuarios"/>
-            <MenuItem text="Ver usuarios" fx:id="menuItemVer"/>
+            <MenuItem text="Ver usuarios" fx:id="menuItemVer" onAction="#verUsuarios"/>
         </Menu>
-        <Menu text="Productos" fx:id="repositorOption">
-            <MenuItem text="Ver productos" fx:id="verProductos"/>
-            <MenuItem text="Añadir" fx:id="menuItemAñadir"/>
-            <MenuItem text="Eliminar" fx:id="menuItemGuardar"/>
+        <Menu text="Inventario" fx:id="adminOption">
+            <MenuItem text="Control de stock" fx:id="stockProductos"/>
+            <MenuItem text="Agregar productos" fx:id="añadirProducto"/>
+            <MenuItem text="Eliminar productos" fx:id="eliminarProducto"/>
         </Menu>
-        <Menu text="Clientes" fx:id="vendedorOption">
+        <Menu text="Clientes" fx:id="adminOption">
             <MenuItem text="Agregar" fx:id="agregarClientes"/>
             <MenuItem text="Ver clientes" fx:id="verClientes"/>
         </Menu>
         <Menu text="Ventas" fx:id="adminOption">
-            <MenuItem text="Abrir" fx:id="menuItemAbrir"/>
+            <MenuItem text="Ver ventas" fx:id="verVentas"/>
             <MenuItem text="Guardar" fx:id="menuItemGuardar"/>
             <MenuItem text="Salir" fx:id="menuItemSalir"/>
         </Menu>
-        <Menu text="Reportes" fx:id="adminOption">
-            <MenuItem text="Ver" fx:id="menuItemAbrir"/>
-            <MenuItem text="Guardar" fx:id="menuItemGuardar"/>
-            <MenuItem text="Salir" fx:id="menuItemSalir"/>
-        </Menu>
+        <Menu text="Reportes" fx:id="adminOption"></Menu>
     </MenuBar>
     
     <!-- Espacio para el contenido del formulario u otros elementos -->
