Desarrollo seccion inventario

--- a/GestionVentas/bin/resources/MainView.fxml
+++ b/GestionVentas/bin/resources/MainView.fxml
@@ -11,16 +11,14 @@
             <MenuItem text="Dar de alta" fx:id="menuItemAlta" onAction="#altaUsuarios"/>
             <MenuItem text="Ver usuarios" fx:id="menuItemVer" onAction="#verUsuarios"/>
         </Menu>
-        <Menu text="Inventario" fx:id="repositorOption">
-            <MenuItem text="Control de stock" fx:id="stockProductos"/>
-            <MenuItem text="Agregar productos" fx:id="añadirProducto"/>
-            <MenuItem text="Eliminar productos" fx:id="eliminarProducto"/>
+        <Menu text="Inventario" fx:id="adminOption">
+            <MenuItem text="Gestion inventario" fx:id="menuInventario" onAction="#gestionInventario"/>
         </Menu>
         <Menu text="Clientes" fx:id="vendedorOption">
             <MenuItem text="Agregar" fx:id="agregarClientes"/>
             <MenuItem text="Ver clientes" fx:id="verClientes"/>
         </Menu>
-        <Menu text="Ventas" fx:id="adminOption"></Menu>
+        <Menu text="Ventas" fx:id="repositorOption"></Menu>
         <Menu text="Reportes" fx:id="adminOption"></Menu>
     </MenuBar>
     
