--- a/GestionVentas/bin/resources/AddUser.fxml
+++ b/GestionVentas/bin/resources/AddUser.fxml
@@ -10,50 +10,69 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-
-<StackPane prefHeight="264.0" prefWidth="551.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.UsersController">
-<VBox alignment="CENTER">
-    <Label text="Nuevo usuario" textAlignment="CENTER" textFill="WHITE">
-        <padding>
-            <Insets bottom="20.0" />
-        </padding>
-    <font>
-        <Font name="System Bold Italic" size="15.0" />
-    </font>
-    </Label>
-    <TextField fx:id="nomYapeField" alignment="TOP_LEFT" maxWidth="200.0" prefHeight="25.0" promptText="Nombre y apellido">
-        <VBox.margin>
-            <Insets bottom="10.0" />
-        </VBox.margin>
-    </TextField>
-    <TextField fx:id="dniField" alignment="TOP_LEFT" maxWidth="200.0" prefHeight="25.0" promptText="DNI">
-        <VBox.margin>
-            <Insets bottom="10.0" />
-        </VBox.margin>
-    </TextField>
-    <TextField fx:id="emailField" alignment="TOP_LEFT" maxWidth="200.0" prefHeight="25.0" promptText="Correo electronico">
-        <VBox.margin>
-            <Insets bottom="10.0" />
-        </VBox.margin></TextField>
-    <MenuButton fx:id="perfilMenuButton" text="Tipo de perfil">
-        <items>
-        <MenuItem fx:id="adminMenuIem" text="Administrador" onAction="#initialize" />
-        <MenuItem fx:id="vendedorMenuIem" text="Vendedor" onAction="#initialize" />
-        <MenuItem fx:id="repositorMenuIem" text="Repositor" onAction="#initialize" />
-        </items>
-    </MenuButton>
-    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-        <children>
-        <Button mnemonicParsing="false" text="Agregar" onAction="#agregarUsuario">
-            <HBox.margin>
-                <Insets right="50.0" />
-            </HBox.margin>
-        </Button>
-        <Button contentDisplay="CENTER" mnemonicParsing="false" text="Cancelar" />
-        </children>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<!-- Vista gestion de usuarios - Agregar, ver, buscar -->
+<StackPane stylesheets="@styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.UsersController">
+    <HBox alignment="CENTER" spacing="50.0" HBox.hgrow="ALWAYS"> 
+        <VBox alignment="CENTER" spacing="20.0" styleClass="vbox">
+            <padding>
+                <Insets top="40.0" right="70.0" bottom="40.0" left="100.0" />
+            </padding>
+            <Label text="Nuevo usuario" textAlignment="CENTER" textFill="WHITE">
+                <padding>
+                    <Insets bottom="10.0" />
+                </padding>
+                <font>
+                    <Font name="System Bold Italic" size="15.0" />
+                </font>
+            </Label>
+            <!-- Campo nombre y apellido -->
+            <TextField fx:id="nomYapeField" alignment="TOP_LEFT" prefWidth="250.0" prefHeight="25.0" promptText="Nombre y apellido" />
+            <!-- Campo dni -->
+            <TextField fx:id="dniField" alignment="TOP_LEFT" prefWidth="250.0" prefHeight="25.0" promptText="DNI" />
+            <!-- Campo email -->
+            <TextField fx:id="emailField" alignment="TOP_LEFT" prefWidth="250.0" prefHeight="25.0" promptText="Correo electronico" />
+            <!-- Campo perfil -->
+            <MenuButton fx:id="perfilMenuButton" text="Tipo de perfil">
+                <items>
+                    <MenuItem fx:id="adminMenuItem" text="Administrador" onAction="#initialize" />
+                    <MenuItem fx:id="gerenteMenuItem" text="Gerente" onAction="#initialize" />
+                    <MenuItem fx:id="vendedorMenuItem" text="Vendedor" onAction="#initialize" />
+                </items>
+            </MenuButton>
+            <!-- Contenedor horizontal para botones -->
+            <HBox alignment="CENTER" spacing="10" styleClass="hbox">
+                <Button text="Agregar" onAction="#agregarUsuario" prefHeight="25.0" prefWidth="68.0"/>
+                <Button text="Cancelar" prefHeight="25.0" prefWidth="68.0"/>
+            </HBox>
+        </VBox>
+        <VBox alignment="CENTER_LEFT" spacing="20.0" styleClass="vbox">
+            <Label text="Buscar usuario" textAlignment="CENTER" textFill="WHITE">
+                <padding>
+                    <Insets bottom="10.0" />
+                </padding>
+                <font>
+                    <Font name="System Bold Italic" size="15.0" />
+                </font>
+            </Label>
+            <!-- Contenedor para buscador -->
+            <HBox>
+                <TextField fx:id="buscarCliente" promptText="Nro documento" />
+                <Button fx:id="btnBuscarCliente" text="Buscar"/>
+            </HBox> 
+            <padding>
+                <Insets top="40.0" right="40.0" bottom="40.0" left="40.0" />
+            </padding>
+            <!-- Tabla que visualiza los usuarios -->
+            <TableView>
+                <columns>
+                    <TableColumn prefWidth="159.33331298828125" text="Nombre y apellido" />
+                    <TableColumn prefWidth="164.00003051757812" text="Documento" />
+                    <TableColumn prefWidth="145.33334350585938" text="Email" />
+                    <TableColumn prefWidth="130.66668701171875" text="Tipo usuario" />
+                </columns>
+            </TableView>
+        </VBox>
     </HBox>
-    <StackPane.margin>
-        <Insets />
-    </StackPane.margin>
-</VBox>
 </StackPane>
