--- a/GestionVentas/bin/resources/AddClient.fxml
+++ b/GestionVentas/bin/resources/AddClient.fxml
@@ -10,45 +10,63 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-
-<StackPane prefHeight="264.0" prefWidth="551.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
-<VBox alignment="CENTER">
-    <Label text="Nuevo cliente" textAlignment="CENTER" textFill="WHITE">
-        <padding>
-            <Insets bottom="20.0" />
-        </padding>
-    <font>
-        <Font name="System Bold Italic" size="15.0" />
-    </font>
-    </Label>
-    <TextField fx:id="nomYapeField" alignment="TOP_LEFT" maxWidth="200.0" prefHeight="25.0" promptText="Nombre y apellido">
-        <VBox.margin>
-            <Insets bottom="10.0" />
-        </VBox.margin>
-    </TextField>
-    <TextField fx:id="dniField" alignment="TOP_LEFT" maxWidth="200.0" prefHeight="25.0" promptText="DNI">
-        <VBox.margin>
-            <Insets bottom="10.0" />
-        </VBox.margin>
-    </TextField>
-    <TextField fx:id="emailField" alignment="TOP_LEFT" maxWidth="200.0" prefHeight="25.0" promptText="Correo electronico">
-        <VBox.margin>
-            <Insets bottom="10.0" />
-        </VBox.margin>
-    </TextField>
-
-    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-        <children>
-        <Button mnemonicParsing="false" text="Agregar">
-            <HBox.margin>
-                <Insets right="50.0" />
-            </HBox.margin>
-        </Button>
-        <Button contentDisplay="CENTER" mnemonicParsing="false" text="Cancelar" />
-        </children>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<!-- Vista gestion de usuarios - Agregar, ver, buscar -->
+<StackPane stylesheets="@styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+    <HBox alignment="CENTER" spacing="50.0" HBox.hgrow="ALWAYS"> 
+        <VBox alignment="CENTER" spacing="20.0" HBox.hgrow="ALWAYS" styleClass="vbox">
+            <padding>
+                <Insets top="40.0" right="70.0" bottom="40.0" left="100.0" />
+            </padding>
+            <Label text="Registrar nuevo cliente" textAlignment="CENTER" textFill="WHITE">
+                <padding>
+                    <Insets bottom="10.0" />
+                </padding>
+                <font>
+                    <Font name="System Bold Italic" size="15.0" />
+                </font>
+            </Label>
+            <!-- Campo nombre y apellido-->
+            <TextField fx:id="nomYapeField" alignment="TOP_LEFT" prefWidth="250.0" prefHeight="25.0" promptText="Nombre y apellido" />
+            <!-- Campo dni -->
+            <TextField fx:id="dniField" alignment="TOP_LEFT" prefWidth="250.0" prefHeight="25.0" promptText="Documento" />
+            <!-- Campo email -->
+            <TextField fx:id="emailField" alignment="TOP_LEFT" prefWidth="250.0" prefHeight="25.0" promptText="Correo electronico" />
+            <!-- Campo telefono -->
+            <TextField fx:id="telefonoField" alignment="TOP_LEFT" prefWidth="250.0" prefHeight="25.0" promptText="Telefono" />
+            <!-- Contenedor horizontal para botones -->
+            <HBox alignment="CENTER" spacing="10" styleClass="hbox">
+                <Button text="Agregar" prefHeight="25.0" prefWidth="68.0"/>
+                <Button text="Cancelar" prefHeight="25.0" prefWidth="68.0"/>
+            </HBox>
+        </VBox>
+        <VBox alignment="CENTER_LEFT" spacing="20.0" HBox.hgrow="ALWAYS" styleClass="vbox">
+            <Label text="Buscar cliente" textAlignment="CENTER" textFill="WHITE">
+                <padding>
+                    <Insets bottom="10.0" />
+                </padding>
+                <font>
+                    <Font name="System Bold Italic" size="15.0" />
+                </font>
+            </Label>
+            <!-- Contenedor para buscador -->
+            <HBox>
+                <TextField fx:id="buscarCliente" promptText="Documento" />
+                <Button fx:id="btnBuscarCliente" text="Buscar"/>
+            </HBox> 
+            <padding>
+                <Insets top="40.0" right="40.0" bottom="40.0" left="40.0" />
+            </padding>
+            <!-- Tabla que visualiza los clientes -->
+            <TableView fx:id="tableClient">
+                <columns>
+                    <TableColumn fx:id="nomyapeCol" prefWidth="159.33331298828125" text="Nombre y apellido" />
+                    <TableColumn fx:id="dniCol" prefWidth="164.00003051757812" text="Documento" />
+                    <TableColumn fx:id="emailCol" prefWidth="145.33334350585938" text="Email" />
+                    <TableColumn fx:id="telefonoCol" prefWidth="145.33334350585938" text="Telefono" />
+                </columns>
+            </TableView>
+        </VBox>
     </HBox>
-    <StackPane.margin>
-        <Insets />
-    </StackPane.margin>
-</VBox>
 </StackPane>
