--- a/GestionVentas/src/resources/InventarioView.fxml
+++ b/GestionVentas/src/resources/InventarioView.fxml
@@ -1,21 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import app.UsersController?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-
-<!-- InventoryView.fxml -->
-<VBox xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" stylesheets="@styles.css">
-    <TableView fx:id="tablaProductos">
-        <columns>
-            <TableColumn fx:id="nombreCol" text="Nombre" />
-            <TableColumn fx:id="precioCol" text="Precio" />
-            <TableColumn fx:id="stockCol" text="Stock" />
-        </columns>
-    </TableView>
-
-    <Button fx:id="btnAgregar" text="Agregar Producto" />
-</VBox>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<!-- Vista gestion de usuarios - Agregar, ver, buscar -->
+<StackPane stylesheets="@styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+    <HBox alignment="CENTER" spacing="50.0" HBox.hgrow="ALWAYS"> 
+        <VBox alignment="CENTER" spacing="20.0" HBox.hgrow="ALWAYS" styleClass="vbox">
+            <padding>
+                <Insets top="40.0" right="70.0" bottom="40.0" left="100.0" />
+            </padding>
+            <Label text="Agregar producto" textAlignment="CENTER" textFill="WHITE">
+                <padding>
+                    <Insets bottom="10.0" />
+                </padding>
+                <font>
+                    <Font name="System Bold Italic" size="15.0" />
+                </font>
+            </Label>
+            <!-- Campo nombre -->
+            <TextField fx:id="nomField" alignment="TOP_LEFT" prefWidth="250.0" prefHeight="25.0" promptText="Nombre" />
+            <!-- Campo descripcion -->
+            <TextField fx:id="descField" alignment="TOP_LEFT" prefWidth="250.0" prefHeight="25.0" promptText="Descripcion" />
+            <!-- Campo stock -->
+            <TextField fx:id="stockField" alignment="TOP_LEFT" prefWidth="250.0" prefHeight="25.0" promptText="Stock" />
+            <!-- Campo precio -->
+            <TextField fx:id="precioField" alignment="TOP_LEFT" prefWidth="250.0" prefHeight="25.0" promptText="Precio" />
+            <!-- Contenedor horizontal para botones -->
+            <HBox alignment="CENTER" spacing="10" styleClass="hbox">
+                <Button text="Agregar" prefHeight="25.0" prefWidth="68.0"/>
+                <Button text="Cancelar" prefHeight="25.0" prefWidth="68.0"/>
+            </HBox>
+        </VBox>
+        <VBox alignment="CENTER_LEFT" spacing="20.0" HBox.hgrow="ALWAYS" styleClass="vbox">
+            <Label text="Buscar producto" textAlignment="CENTER" textFill="WHITE">
+                <padding>
+                    <Insets bottom="10.0" />
+                </padding>
+                <font>
+                    <Font name="System Bold Italic" size="15.0" />
+                </font>
+            </Label>
+            <!-- Contenedor para buscador -->
+            <HBox>
+                <TextField fx:id="buscarProducto" promptText="Nombre" />
+                <Button fx:id="btnBuscarProd" text="Buscar"/>
+            </HBox> 
+            <padding>
+                <Insets top="40.0" right="40.0" bottom="40.0" left="40.0" />
+            </padding>
+            <!-- Tabla que visualiza los usuarios -->
+            <TableView fx:id="tableProducts">
+                <columns>
+                    <TableColumn fx:id="nombreCol" prefWidth="159.33331298828125" text="Nombre" />
+                    <TableColumn fx:id="precioCol" prefWidth="164.00003051757812" text="Precio" />
+                    <TableColumn fx:id="stockCol" prefWidth="145.33334350585938" text="Stock" />
+                </columns>
+            </TableView>
+        </VBox>
+    </HBox>
+</StackPane>
