--- a/GestionVentas/src/resources/RegistroVenta.fxml
+++ b/GestionVentas/src/resources/RegistroVenta.fxml
@@ -19,7 +19,7 @@
             <padding>
                 <Insets top="40.0" right="70.0" bottom="40.0" left="100.0" />
             </padding>
-            <Label text="Agregar producto" textAlignment="CENTER" textFill="WHITE">
+            <Label text="Registrar venta" textAlignment="CENTER" textFill="WHITE">
                 <padding>
                     <Insets bottom="10.0" />
                 </padding>
@@ -28,44 +28,20 @@
                 </font>
             </Label>
             <!-- Campo nombre -->
-            <TextField fx:id="nomField" alignment="TOP_LEFT" prefWidth="250.0" prefHeight="25.0" promptText="Nombre" />
+            <TextField fx:id="nomField" alignment="TOP_LEFT" prefWidth="250.0" prefHeight="25.0" promptText="Fecha" />
             <!-- Campo descripcion -->
-            <TextField fx:id="descField" alignment="TOP_LEFT" prefWidth="250.0" prefHeight="25.0" promptText="Descripcion" />
+            <TextField fx:id="descField" alignment="TOP_LEFT" prefWidth="250.0" prefHeight="25.0" promptText="DNI vendedor" />
             <!-- Campo stock -->
-            <TextField fx:id="stockField" alignment="TOP_LEFT" prefWidth="250.0" prefHeight="25.0" promptText="Stock" />
+            <TextField fx:id="stockField" alignment="TOP_LEFT" prefWidth="250.0" prefHeight="25.0" promptText="DNI cliente" />
             <!-- Campo precio -->
+            <TextField fx:id="precioField" alignment="TOP_LEFT" prefWidth="250.0" prefHeight="25.0" promptText="Codigo producto" />
             <TextField fx:id="precioField" alignment="TOP_LEFT" prefWidth="250.0" prefHeight="25.0" promptText="Precio" />
+            <TextField fx:id="precioField" alignment="TOP_LEFT" prefWidth="250.0" prefHeight="25.0" promptText="Cantidad" />
             <!-- Contenedor horizontal para botones -->
             <HBox alignment="CENTER" spacing="10" styleClass="hbox">
                 <Button text="Agregar" prefHeight="25.0" prefWidth="68.0"/>
                 <Button text="Cancelar" prefHeight="25.0" prefWidth="68.0"/>
             </HBox>
-        </VBox>
-        <VBox alignment="CENTER_LEFT" spacing="20.0" HBox.hgrow="ALWAYS" styleClass="vbox">
-            <Label text="Buscar producto" textAlignment="CENTER" textFill="WHITE">
-                <padding>
-                    <Insets bottom="10.0" />
-                </padding>
-                <font>
-                    <Font name="System Bold Italic" size="15.0" />
-                </font>
-            </Label>
-            <!-- Contenedor para buscador -->
-            <HBox>
-                <TextField fx:id="buscarProducto" promptText="Nombre" />
-                <Button fx:id="btnBuscarProd" text="Buscar"/>
-            </HBox> 
-            <padding>
-                <Insets top="40.0" right="40.0" bottom="40.0" left="40.0" />
-            </padding>
-            <!-- Tabla que visualiza los usuarios -->
-            <TableView fx:id="tableProducts">
-                <columns>
-                    <TableColumn fx:id="nombreCol" prefWidth="159.33331298828125" text="Nombre" />
-                    <TableColumn fx:id="precioCol" prefWidth="164.00003051757812" text="Precio" />
-                    <TableColumn fx:id="stockCol" prefWidth="145.33334350585938" text="Stock" />
-                </columns>
-            </TableView>
         </VBox>
     </HBox>
 </StackPane>
