--- a/GestionVentas/bin/resources/FormCategoria.fxml
+++ b/GestionVentas/bin/resources/FormCategoria.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<StackPane fx:id="mainContent" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controllers.FormUserController">
+<StackPane fx:id="mainContent" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controllers.FormCategoriaController">
     <VBox alignment="CENTER" spacing="20.0" HBox.hgrow="ALWAYS" styleClass="vbox" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 100%, #7853b0, #366db1);">
             <padding>
                 <Insets top="40.0" right="70.0" bottom="40.0" left="100.0" />
@@ -24,23 +24,13 @@
                 </font>
             </Label>
             <!-- Campo nombre y apellido -->
-            <TextField fx:id="nomYapeField" alignment="TOP_LEFT" prefWidth="250.0" prefHeight="25.0" promptText="Nombre y apellido" />
+            <TextField fx:id="nombreField" alignment="TOP_LEFT" prefWidth="250.0" prefHeight="25.0" promptText="Nombre" />
             <!-- Campo dni -->
-            <TextField fx:id="dniField" alignment="TOP_LEFT" prefWidth="250.0" prefHeight="25.0" promptText="DNI" />
-            <!-- Campo email -->
-            <TextField fx:id="emailField" alignment="TOP_LEFT" prefWidth="250.0" prefHeight="25.0" promptText="Correo electronico" />
-            <!-- Campo perfil -->
-            <MenuButton fx:id="perfilMenuButton" text="Tipo de perfil">
-                <items>
-                    <MenuItem fx:id="adminMenuItem" text="Administrador" onAction="#initialize" />
-                    <MenuItem fx:id="gerenteMenuItem" text="Gerente" onAction="#initialize" />
-                    <MenuItem fx:id="vendedorMenuItem" text="Vendedor" onAction="#initialize" />
-                </items>
-            </MenuButton>
+            <TextField fx:id="descripcionField" alignment="TOP_LEFT" prefWidth="250.0" prefHeight="25.0" promptText="Descripcion" />
             <!-- Contenedor horizontal para botones -->
             <HBox alignment="CENTER" spacing="10" styleClass="hbox">
-                <Button text="Agregar" onAction="#agregarUsuario" prefHeight="25.0" prefWidth="68.0"/>
+                <Button text="Agregar" onAction="#agregarCategoria" prefHeight="25.0" prefWidth="68.0"/>
                 <Button text="Cancelar" prefHeight="25.0" prefWidth="68.0"/>
             </HBox>
-        </VBox>
+    </VBox>
 </StackPane>
