--- a/GestionVentas/bin/resources/InventarioView.fxml
+++ b/GestionVentas/bin/resources/InventarioView.fxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import app.UsersController?>
+
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -12,12 +12,12 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<!-- Vista gestion de usuarios - Agregar, ver, buscar -->
-<StackPane stylesheets="@styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
-    <HBox alignment="CENTER" spacing="50.0" HBox.hgrow="ALWAYS"> 
+<!-- Vista gestion de inventario - Agregar, ver, buscar -->
+<StackPane stylesheets="@styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controllers.InventarioController">
+    <HBox alignment="CENTER" spacing="10.0" HBox.hgrow="ALWAYS" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 100%, #7853b0, #366db1);"> 
         <VBox alignment="CENTER" spacing="20.0" HBox.hgrow="ALWAYS" styleClass="vbox">
             <padding>
-                <Insets top="40.0" right="70.0" bottom="40.0" left="100.0" />
+                <Insets top="20.0" right="35.0" bottom="20.0" left="50.0" />
             </padding>
             <Label text="Agregar producto" textAlignment="CENTER" textFill="WHITE">
                 <padding>
