--- a/GestionVentas/src/resources/CategoriasView.fxml
+++ b/GestionVentas/src/resources/CategoriasView.fxml
@@ -12,10 +12,10 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <!-- Vista gestion de usuarios - Agregar, ver, buscar -->
-<StackPane fx:id="mainContent" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controllers.UserController">
+<StackPane fx:id="mainContent" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controllers.CategoriaController">
     <HBox alignment="CENTER" spacing="50.0" HBox.hgrow="ALWAYS" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 100%, #7853b0, #366db1);"> 
         <VBox alignment="CENTER_LEFT" spacing="20.0" HBox.hgrow="ALWAYS" styleClass="vbox">
-            <Label text="Buscar usuario" textAlignment="CENTER" textFill="WHITE">
+            <Label text="Buscar categoria" textAlignment="CENTER" textFill="WHITE">
                 <padding>
                     <Insets bottom="10.0" />
                 </padding>
@@ -25,9 +25,9 @@
             </Label>
             <!-- Contenedor para buscador -->
             <HBox>
-                <TextField fx:id="buscarUser" promptText="Nro documento" />
-                <Button fx:id="btnBuscarUser" text="Buscar" onAction="#buscarUsuario"/>
-                <Button fx:id="btnAñadir" text="Agregar usuario" onAction="#añadirUsuario"/>
+                <TextField fx:id="buscarUser" promptText="ID categoria" />
+                <Button fx:id="btnBuscarUser" text="Buscar"/>
+                <Button fx:id="btnAñadir" text="Añadir categoria" onAction="#añadirCategoria"/>
             </HBox> 
             <padding>
                 <Insets top="40.0" right="40.0" bottom="40.0" left="40.0" />
@@ -35,10 +35,10 @@
             <!-- Tabla que visualiza los usuarios -->
             <TableView fx:id="tableView">
                 <columns>
-                    <TableColumn fx:id="nombreCol" prefWidth="159.33331298828125" text="Nombre y apellido" />
-                    <TableColumn fx:id="dniCol" prefWidth="164.00003051757812" text="Documento" />
-                    <TableColumn fx:id="emailCol" prefWidth="145.33334350585938" text="Email" />
-                    <TableColumn fx:id="tipoUsuarioCol" prefWidth="130.66668701171875" text="Tipo usuario" />
+                    <TableColumn fx:id="idCol" prefWidth="159.33331298828125" text="ID" />
+                    <TableColumn fx:id="nombreCol" prefWidth="159.33331298828125" text="Nombre" />
+                    <TableColumn fx:id="descCol" prefWidth="164.00003051757812" text="Descripcion" />
+                    <TableColumn fx:id="estadoCol" prefWidth="145.33334350585938" text="Estado" />
                 </columns>
             </TableView>
         </VBox>
