--- a/GestionVentas/src/resources/mainViews/DashboardAdmin.fxml
+++ b/GestionVentas/src/resources/mainViews/DashboardAdmin.fxml
@@ -1,36 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.control.Button?>
+
 <!-- Vista del administrador al ingresar -->
-<StackPane alignment="CENTER" maxHeight="800" maxWidth="1000" prefHeight="600" prefWidth="800" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controllers.AdminController">
+
+<StackPane alignment="CENTER" maxHeight="800" maxWidth="1000" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controllers.AdminController">
     <BorderPane fx:id="mainBorderPane" StackPane.alignment="CENTER">
         <!-- Contenedor superior -->
         <top>
-            <HBox spacing="80" alignment="CENTER">
+            <HBox alignment="CENTER" spacing="80">
                 <Label text="Administrador">
                 <padding>
-                    <Insets left="10.0" right="10.0" top="10.0" bottom="10.0"/>
+                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                 </padding></Label>
-                <Button text="Logout" />
+                <Button fx:id="logoutButton" onAction="#handleLogout" text="Logout" />
             </HBox>
         </top>
         <!-- Contenedor izquierdo -->
         <left>
             <VBox alignment="CENTER" spacing="70">
-                <Button text="Usuarios" onAction="#handleUsers" style="-fx-background-color: transparent; -fx-border-color: transparent; -fx-padding: 0;"/>
-                <Label text="Inventario" textAlignment="CENTER">
-                    <padding>
-                        <Insets left="10.0" right="10.0" />
-                    </padding></Label>
+                <Button onAction="#handleUsers" style="-fx-background-color: transparent; -fx-border-color: transparent; -fx-padding: 0;" text="Usuarios" />
+                <Button onAction="#handleInventario" style="-fx-background-color: transparent; -fx-border-color: transparent; -fx-padding: 0;" text="Inventario" />
+                <Button onAction="#handleCategorias" style="-fx-background-color: transparent; -fx-border-color: transparent; -fx-padding: 0;" text="Categorias" />
                 <Label text="Clientes" textAlignment="CENTER">
                     <padding>
                         <Insets left="10.0" right="10.0" />
